--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "semantic-ui-css": "2.2.4",
+    "semantic-ui-react": "0.63.6"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
